bug overflow reglé avec x

--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
 html{
 	overflow:hidden;
 	scroll-behavior: smooth;
     touch-action: pan-x pan-y;
 }
+
 body{
 	display: flex;
 	flex-wrap: nowrap;
@@ -27,8 +29,6 @@ body{
     font-family: 'Poppins', sans-serif;
 
 }
-
-
 
 
 p{
@@ -47,19 +47,6 @@ p{
 	scroll-snap-align: center;
 }
 
-/* .slide::after{
-	counter-increment: item;
-	content: counter(item);
-	text-shadow: -1px -1px 1px black;
-} */
-
-/* .slide:nth-child(odd){
-	background: rgb(255, 255, 255);
-}
-
-.slide:nth-child(even){
-	background: rgb(255, 255, 255);
-} */
 
 .next-link,
 .prev-link{
@@ -86,7 +73,7 @@ p{
 } 
 
 
-/* LOGO */
+/* _______LOGO_________ */
 
 .logo {
     width: 10%;
@@ -105,7 +92,8 @@ p{
     transition:ease 0.5s;
 }
 
-/* NAV BAR */
+/*___________NAV BAR__________ */
+
 nav{
     width:100%;
     height:10%;
@@ -342,7 +330,7 @@ h3 {
 @media screen and (max-width:930px){
 
     body{
-        overflow: auto;
+        overflow-x: auto;
         height: 100vh;
     }
 
